Fix scrollbar on modal and menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,10 @@
 @import "app/libs/csshake/csshake-slow";
 @import "app/libs/popup/magnific-popup";
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
   @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
